--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,320 @@
-.App {
-  text-align: center;
-}
+@import 'antd/dist/antd.css';
+ @import 'bootstrap/dist/css/bootstrap.min.css';
+ @import url("https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css 336");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap');
+/* @import 'bootstrap/dist/js/bootstrap.min.js'; */ 
+/* @import 'bootstrap/dist/css/bootstrap.min.css'; */
+/* @import 'jquery/dist/jquery.min.js'; */
+/* @import 'bootstrap/dist/js/bootstrap.min.js'; */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+*{
+    box-sizing: border-box;
+    margin:0;
+    padding:0;
+    
+  /* margin: 50px 0; */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+} 
+
+.App{
+    position: relative;
+      max-width: 900px;
+      margin: 0 auto;
+      padding-left: 15px;
+      padding-right: 15px;
+      width: 100%;
+      background: rgb(255,255,255);
+  
   }
+  body{
+      /* background: rgb(255,255,255); */
+      background: linear-gradient(175deg, rgba(255,255,255,1) 0%, rgba(169,210,214,1) 89%);
+      /* background-repeat: no-repeat; */
+      background-size:cover;
+  
+      /* overflow:hidden; */
+      /* height: 100vh; */
+      font-family: 'Poppins', sans-serif;
+  }
+  
+  
+  #loader {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0,0,0,0.75) url('../src/images/loader.gif') no-repeat center center;
+    z-index: 10000;
+  }
+.card {
+  max-width: 900px;
+  background: #fff;
+  /* display: grid; */
+  grid-template: "left right" / 300px 1fr;
+  border-radius: 2px;
+  height: auto;
+}
+.card:hover {
+    border-color: transparent;
+    box-shadow: 0 1px 2px -2px rgb(0 0 0 / 16%), 0 3px 6px 0 rgb(0 0 0 / 12%), 0 5px 12px 4px rgb(0 0 0 / 9%);
+}
+.card>* {
+  padding: 5px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.left {
+  grid-area: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.right {
+  grid-area: right;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+    padding: 20px 70px;
+    color:#fff;
 }
+
+.current-info{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.date-container{
+    font-weight: 100;
+}
+.date-container .time{
+    font-size: 70px;
+}
+
+.date-container #am-pm{
+    font-size: 30px;
+    margin-left: 20px;
+}
+
+.date-container .date{
+    font-size: 30px;
+}
+
+.place-container{
+    text-align: end;
+}
+
+.place-container .time-zone{
+    font-size: 30px;
+    font-weight: 100;
+}
+
+.place-container .country{
+    font-size: 12px;
+    font-weight: 700;
+}
+
+.current-info .others{
+    display: flex;
+    flex-direction: column;
+    background: rgba(24,24,27, 0.6);
+    padding:20px;
+    border-radius: 10px;
+    margin: 10px 0;
+    border: 1px solid #eee;
+}
+
+.current-info .others .weather-item{
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.future-forecast{
+    /* background: rgba(24,24,27,0.8); */
+    padding: 25px 0;
+    /* position: fixed; */
+    /* bottom: 0; */
+    display: flex;
+    /* color:white; */
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    overflow-y: hidden;
+}
+
+.future-forecast .today{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #eee;
+    border-radius: 10px;
+    padding:15px;
+    padding-right: 40px;
+    border-radius: 10px;
+    background: rgba(0,0,0,0.2)
+}
+
+.future-forecast .today .day{
+    padding: 5px 15px;
+    background: #3c3c44;
+    border-radius: 50px;
+    text-align: center;
+    color:white;
+}
+
+.future-forecast .today .temp{
+    font-size: 18px;
+    padding-top: 15px;
+}
+
+.future-forecast .weather-forecast{
+    display: flex;
+}
+
+.weather-forecast-item h4 span:last-child,.weather-forecast-item-now h4 span:last-child {
+  margin-left: 10px;
+  /* font-size: .875rem; */
+  opacity: .7;
+}
+
+.today{
+display: flex;
+text-align: center;
+justify-content: space-between;
+}
+.today__left-content{
+  background: #f5faff;
+  border-radius: 10px;
+  width: 200px;
+    font-weight: bold;
+    height: 100px;
+}
+
+ 
+.today__right-content{
+  background: #f5faff;
+  border-radius: 10px;
+  width: 200px;
+  height: 100px;
+  margin-left: auto;
+  font-weight: bold;
+
+}
+.location-box-cover{ margin-top: 50px;}
+.weather-forecast .weather-forecast-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+    /* border: 1px solid rgba(75,175,234,255); */
+    /* padding: 15px; */
+    border-radius: 10px;
+    /* background: rgba(0,0,0,0.2) */
+}
+.weather-forecast .weather-forecast-item-now{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 5px;
+    border: 1px solid rgba(75,175,234,255);
+    /* padding: 15px; */
+    border-radius: 10px;
+    /* background: rgba(0,0,0,0.2) */
+}
+.weather-forecast .weather-forecast-item .day ,.weather-forecast .weather-forecast-item-now .day{
+    /* padding: 5px 15px; */
+    /* background: #3C3C44; */
+    border-radius: 50px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 500;
+    /* color:white; */
+}
+
+.weather-forecast .weather-forecast-item .temp{
+    font-weight: 100;
+    font-size: 12px;
+}
+
+
+
+span.highcharts-title{
+    position: absolute;
+    font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    white-space: nowrap;
+    margin-left: 0px;
+    margin-top: -13px;
+    left: 0px;
+    top: 7px;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+    fill: rgb(51, 51, 51);
+    display: flex;
+  }
+@media only screen and  (max-width:730px){
+    
+    .container{
+        padding: 20px;
+    }
+    
+    .future-forecast{
+        justify-content: start;
+        align-items: none;
+        overflow-y: scroll;
+    }
+
+    .future-forecast .today .temp{
+        font-size: 16px;
+    }
+
+    .date-container .time{
+        font-size: 50px;
+    }
+
+    .date-container #am-pm{
+        font-size: 20px;
+    }
+
+    .date-container .date{
+        font-size: 20px;
+    }
+
+    .place-container{
+        text-align: end;
+        margin-top: 15px;
+    }
+
+    .place-container .time-zone{
+        font-size: 20px;
+    }
+
+    .current-info .others{
+        padding: 12px;
+    }
+
+    .current-info .others .weather-item{
+        font-size: 14px;
+    }
+
+}
+
+@media only screen and (max-width: 1400px){
+    .future-forecast{
+        justify-content: start;
+        align-items: none;
+        overflow-x: scroll;
+    }
+}
+
+
+
+@media screen and (max-width: 700px) {
+    .card {
+      grid-template: "left" "right" / 100%;
+    }
+  }
